<resources>
    <!--App stuff-->
    <string name="app_name">Podium</string>
    <string name="tag_line">Real data. Really difficult to master.</string>
    <string name="nightcap">#anightcapinitiative</string>
    <string name="build_date">6 March 2016</string>
    <string name="author">Paul Wong</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_about">About</string>
    <string name="drawer_achievements">Achievements</string>
    <string name="drawer_comms">Communicate</string>
    <string name="drawer_share">Share with friends</string>
    <string name="drawer_feedback">Send feedback</string>
    <string name="drawer_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <!--Feedback-->
    <string name="feedback_subject">App feedback</string>
    <string name="feedback_dialog_title">Send email using&#8230;</string>

    <!--About-->
    <string name="about_version">Version</string>
    <string name="about_build_date">Build date</string>
    <string name="about_copyright">Copyright © 2016</string>
    <string name="about_changelog">Change log</string>
    <string name="about_credits">Credits</string>

    <!--Main screen card-->
    <string name="fb_card_title">Facebook Audiences</string>
    <string name="fb_card_info">These data were obtained using Facebook\'s Preferred Audience tool. The categories used here are a small subset of the complete data set.</string>
    <string name="fb_card_button">Start game</string>

    <!--Quiz dialogs-->
    <string name="fb_start_dialog_title">According to Facebook&#8230;</string>
    <string name="fb_start_dialog_message">Which of the following is more popular?</string>
    <string name="fb_start_dialog_positive_button">Start</string>
    <string name="fb_end_dialog_title">Game over!</string>
    <string name="fb_end_dialog_message">You scored</string>
    <string name="fb_end_dialog_positive_button">Let\'s go again</string>
    <string name="fb_end_dialog_negative_button">Quit</string>
    <string name="fb_end_dialog_negative_button_rage">~%\#\@*?!</string>

    <!--Score bar-->
    <string name="score_bar_prev_label">Previous</string>
    <string name="score_bar_high_label">Highest</string>

    <!--Snackbar messages-->
    <string name="snack_default">Correct!</string>
    <string name="snack_3">Three in a row — great start!</string>
    <string name="snack_10">You\'ve hit double digits. Keep it up!</string>
    <string name="snack_20">Well you\'re definitely not guessing randomly</string>
    <string name="snack_high_equal">You\'ve equaled your highest score!</string>
    <string name="snack_high_new">New record!</string>
    <string name="snack_rage_quit">Rage quit achievement unlocked!</string>
    <string name="title_activity_ad">AdActivity</string>

    <!--Advertisement-->
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>
