<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/drawer_about" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/drawer_achievements" />
    </group>

    <item android:title="@string/drawer_comms">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_feedback" />
        </menu>
    </item>

</menu>
