<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorCardBackground"
    tools:context="com.nightcap.podium.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_card_padding">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_card_text_margin"
                android:text="@string/fb_card_title"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:id="@+id/quiz_info"
                android:layout_below="@+id/quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb_card_info"
                style="@style/TextAppearance.AppCompat.Small" />
            <Button
                android:id="@+id/button"
                android:layout_below="@+id/quiz_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_card_text_margin"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/fb_card_button"
                android:textColor="@android:color/primary_text_dark"
                android:onClick="startGame"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Colored" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
