<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
	android:background="@color/colorCardBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:elevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_card_padding">

            <!--Logo-->
            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="@dimen/about_logo_size"
                android:layout_height="@dimen/about_logo_size"
                android:layout_marginRight="@dimen/main_card_padding"
                android:gravity="center"
                android:src="@drawable/ic_podium"
                android:scaleType="fitCenter"
                android:cropToPadding="false"
                android:contentDescription="@string/app_name" />

            <!--App info-->
            <TextView
                android:id="@+id/about_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/about_text_margin"
                android:layout_toEndOf="@id/about_logo"
                android:layout_alignTop="@+id/about_logo"
                android:text="@string/app_name"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/about_logo"
                android:layout_below="@+id/about_name"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="Version number" />
            <TextView
                android:id="@+id/about_build_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/about_text_margin"
                android:layout_toEndOf="@id/about_logo"
                android:layout_below="@+id/about_version"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="Build date" />

            <!--Copyright-->
            <TextView
                android:id="@+id/about_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/about_logo"
                android:layout_below="@+id/about_build_date"
                android:text="@string/about_copyright"
                style="@style/TextAppearance.AppCompat.Small" />
            <TextView
                android:id="@+id/about_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/about_logo"
                android:layout_below="@+id/about_copyright"
                android:text="@string/author"
                style="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:elevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_card_padding">

            <TextView
                android:id="@+id/about_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/about_text_margin"
                android:text="@string/about_credits"
                style="@style/TextAppearance.AppCompat.Title" />

            <ListView
                android:id="@+id/about_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:divider="@null" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/nightcap"
        android:gravity="bottom|center_horizontal"/>

</LinearLayout>
